syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "baby.mumu.authentication.client.api.grpc";
option java_outer_classname = "PermissionServiceProto";

service PermissionService {
  rpc findAll (PermissionFindAllGrpcCmd) returns (PageOfPermissionFindAllGrpcDTO);
  rpc findById (google.protobuf.Int64Value) returns (PermissionFindByIdGrpcDTO);
}

message PermissionFindAllGrpcCmd {
  int64 id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  int32 current = 5;
  int32 page_size = 6;
}

message PermissionFindAllGrpcDTO {
  int64 id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  bool hasDescendant = 5;
}

message PermissionFindByIdGrpcDTO {
  int64 id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  bool hasDescendant = 5;
}

message PageOfPermissionFindAllGrpcDTO {
  repeated PermissionFindAllGrpcDTO content = 1;
  int32 total_pages = 2;
}
